manifests/hello-domain/templates/svc-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-domain-service
spec:
  selector:
    app: hello-domain
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8000
  type: ClusterIP
