manifests/hello-domain/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-hello-domain
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: "spo-dev.pea.co.th"
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: hello-domain-service
                port:
                  number: 80
